--- a/database/bot/settings.json
+++ b/database/bot/settings.json
@@ -1,30 +1,30 @@
 {
 	"prefix": "#",
-	"ownerNumber": "6282347260729",
-	"ownername": "RIMURUBOTZ",
-	"botname": "MYBOTZ",
+	"ownerNumber": "6281915605137",
+	"ownername": "BANG ALIF GMTENG",
+	"botname": "Sad-ZboTಥ_ಥ",
 	"tz": "➪",
 	
-	"link1": "https://chat.whatsapp.com/B4qFFc2GFVc1dtRMOXot3I",
-	"link2": "https://chat.whatsapp.com/B4qFFc2GFVc1dtRMOXot3I",
-	"link3": "https://chat.whatsapp.com/B4qFFc2GFVc1dtRMOXot3I",
+	"link1": "https://chat.whatsapp.com/Kb1HVUnOKEY5vEOqGZl8DV",
+	"link2": "https://chat.whatsapp.com/Kb1HVUnOKEY5vEOqGZl8DV",
+	"link3": "https://chat.whatsapp.com/Kb1HVUnOKEY5vEOqGZl8DV",
 	
-	"instagram": "RIMURUBOTZ",
-	"youtube": "RIMURUBOTZ",
+	"instagram": "NOT",
+	"youtube": "NOT",
 	"tiktok": "NOT",
 	"twitter": "NOT",
 	"facebook": "NOT",
 	
 	"donasi": "LIST DONASI :)",
-	"gopay": "082347260729",
-	"dana": "082347260729",
-	"pulsa": "082347260729",
+	"gopay": "081915605137",
+	"dana": "081915605137",
+	"pulsa": "081915605137",
 	
-	"asal": "MAKASSAR",
-	"umur": "9 TAHUN",
+	"asal": "MALANG",
+	"umur": "16 TAHUN",
 	"agama": "ISLAM",
-	"gender": "GIRL",
+	"gender": "BOYS",
 		
-	"captionfake": "MYBOTZ IN TERVERIFIKASI",
+	"captionfake": "Sad-ZboTಥ_ಥ IN TERVERIFIKASI",
 	"textmenu": "© Whatsapp || @adiwajshing/baileys"
 }
